# threading-parallel-implementation

./: CMakeLists.txt  README.md
gtest/src/: s0_threading_parallel_algorithms_test.cpp
include/public/: s0_parallel_algorithms_threading.hpp  s0_thread_pool.hpp
src/: s0_thread_pool.cpp
